PageActions enpoint and updated yaml
GPT is eating this up... yeesh...
