# notion_manager/routes.ts
@@ -4,10 +4,8 @@ import notionController from "./notionController"
 
 const router = express.Router();
 
-router.post("/sgsgs", notionController.updateProperty);
-
 router.get("/codeBlock", notionController.getBlockCode);
-router.get("/", notionController.getChildBlocks);
+router.post("/pageActions", notionController.pageActions);
 router.delete("/", notionController.deleteBlock);
 
 router.post("/codeBlock", notionController.updateCodeBlock);
